--- a/index.html
+++ b/index.html
@@ -9,7 +9,38 @@
 <body>
     <header>
         <h1>Leonard Scheer</h1>
-        <p>Leonard Scheer is a software engineer with over 10 years of experience in web development. He specializes in creating dynamic and responsive web applications.</p>
+        <p>In the heart of Switzerland, where precision and discipline are valued, there exists a man who has dedicated his life to two noble pursuits: losing bets and missing training sessions. This is the story of Leonard Scheer, a 22-year-old roller hockey sensation, full-time university student (on paper), and part-time casino donation enthusiast.
+
+The Man, The Myth, The Lost Paycheck
+While most students spend their nights studying, Leonard prefers a more intellectually stimulating challenge: trying to turn 20 CHF into 2000 CHF on online blackjack. Unfortunately, his "double or nothing" strategy has resulted in nothing more often than double. It is rumored that he once pawned his roller skates to place a bet, only to later realize that running on a rink is significantly less effective than rolling.
+
+When confronted about his financial habits, Leonard proudly defends himself:
+"Gambling isn’t a problem if you win… and technically, if you don’t stop, you haven’t lost yet."
+
+Brilliant. Future economics professor in the making.
+
+RSC Uttigen’s Unofficial Mascot
+As a roller hockey player for RSC Uttigen, Leonard brings a unique dynamic to the team. Not in terms of skill or dedication—those are highly debatable—but in his ability to turn post-match celebrations into pre-match warm-ups.
+
+Coaches say he’s one of the most unpredictable players on the field, but that’s mostly because he rarely shows up to training and forgets half the team’s strategies. Teammates describe his playing style as "creative", meaning he often forgets what sport he’s playing halfway through a game. Some fans still remember the time he tried to perform a poker bluff on the referee after a penalty call.
+
+A Scholar of Life (and Losing Streaks)
+Despite his university enrollment, Leonard’s real education happens at the local bar. He claims to be "studying human psychology," which mostly involves trying to convince bartenders to let him open a tab. His final thesis might be titled:
+"The Effects of Tequila on Performance: A Case Study on Why I Can’t Remember Last Saturday."
+
+His professors have grown used to his unique attendance schedule, which follows a strict pattern:
+
+Monday: Hangover recovery
+Tuesday: Slightly less hungover recovery
+Wednesday: "Might as well start the weekend early"
+Thursday: High-stakes poker night
+Friday: Realization that deadlines exist
+Saturday: Roller hockey game (if awake)
+Sunday: Church (just kidding, more drinking)
+The Future is Bright (Unless It’s the Bar’s Neon Lights)
+Despite his self-destructive tendencies, Leonard remains an icon—a man of mystery, a scholar of luck, and an athlete of questionable endurance. Will he ever quit gambling, stop drinking, and focus on hockey? Probably not. But one thing is certain: whether it’s on the rink or at the roulette table, Leonard Scheer will always bet on himself.
+
+And unfortunately, so will his bookie.</p>
     </header>
     <nav>
         <ul>
