Add menu button and menu functionality
* Add a button element for the menu in `index.html`
* Add a div element for the menu with options "Dashboard" and "About Us" in `index.html`
* Add styles for the menu button and menu in `styles.css`
* Add JavaScript to handle the button click event and toggle the visibility of the menu in `app.js`

--- a/index.html
+++ b/index.html
@@ -46,17 +46,19 @@
 
         <p>And unfortunately, so will his bookie.</p>
     </header>
-    <nav>
+    <button id="menu-button">Menu</button>
+    <div id="menu" style="display: none;">
         <ul>
-            <li><a href="#about-us">About Us</a></li>
             <li><a href="#dashboard">Dashboard</a></li>
+            <li><a href="#about-us">About Us</a></li>
         </ul>
-    </nav>
+    </div>
     <main>
         <p>This is the main content area.</p>
     </main>
     <footer>
         <p>&copy; 2023 My Website</p>
     </footer>
+    <script src="app.js"></script>
 </body>
 </html>
