--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 
         <p>And unfortunately, so will his bookie.</p>
     </header>
-    <nav>
+    <button id="menu-toggle">Toggle Menu</button>
+    <nav id="menu-bar">
         <ul>
             <li><a href="#about-us">About Us</a></li>
             <li><a href="#dashboard">Dashboard</a></li>
