Fix the website
Add null checks and update HTML elements to match menu bar links.

* **app.js**
  - Add a check to ensure `menuBar` is not null before toggling the hidden class.
  - Add a check to ensure `menuToggleButton` is not null before adding the event listener.

* **index.html**
  - Add an id attribute to the header element to match the menu bar links.
  - Add an id attribute to the main element to match the menu bar links.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/griboloski/my-website?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <header id="about-us">
         <h1>Leonard Scheer</h1>
         <h2>In the heart of Switzerland</h2>
         <p>In the heart of Switzerland, where precision and discipline are valued, there exists a man who has dedicated his life to two noble pursuits: losing bets and missing training sessions. This is the story of Leonard Scheer, a 22-year-old roller hockey sensation, full-time university student (on paper), and part-time casino donation enthusiast.</p>
@@ -53,7 +53,7 @@
             <li><a href="#dashboard">Dashboard</a></li>
         </ul>
     </nav>
-    <main>
+    <main id="dashboard">
         <p>This is the main content area.</p>
     </main>
     <footer>
