--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Leonard Scheer - Roller hockey player and university student">
+    <meta name="keywords" content="Leonard Scheer, roller hockey, university student, Switzerland">
+    <meta name="author" content="Leonard Scheer">
     <title>Leonard Scheer</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header id="about-us">
