Update styles, HTML, and JavaScript for better performance and readability
* **styles.css**
  - Change body background color to `#f4f4f4` and text color to `#333`
  - Add padding and change font-family to 'Roboto'
  - Adjust line-height for p tags

* **index.html**
  - Add meta tags for better performance and SEO
  - Add link to favicon and Google Font

* **app.js**
  - Optimize event listeners for buttons and links

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Leonard Scheer - Roller hockey player and university student">
     <meta name="keywords" content="Leonard Scheer, roller hockey, university student, Switzerland">
     <meta name="author" content="Leonard Scheer">
+    <meta name="robots" content="index, follow">
+    <meta name="theme-color" content="#333">
     <title>Leonard Scheer</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
