--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
     <main id="dashboard">
         <p>This is the main content area.</p>
     </main>
+    <section class="card">
+        <div class="text-content">
+            <h3>Your Card Title</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>  
+            <a href="https://www.web-leb.com/code">Join now</a>
+        </div>
+        <div class="visual">
+            <img src="https://i.pinimg.com/736x/5a/dd/16/5add164dac701c1ccbfd53914f927794.jpg" alt="" />
+        </div>
+    </section>
     <footer>
         <p>&copy; 2023 My Website</p>
     </footer>
@@ -130,5 +141,6 @@
             </button>
         </form>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
