--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <meta name="theme-color" content="#333">
     <title>Leonard Scheer</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="new-styles.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,300,500" rel="stylesheet">
 </head>
 <body>
     <header id="about-us">
