--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your DJ Name</title>
+  <title>My DJ Website</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
   <section id="home" class="hero">
     <div class="hero-content">
       <img src="assets/images/placeholder-logo.png" alt="Logo" class="logo">
-      <h1>Your DJ Name</h1>
+      <h1>My DJ Name</h1>
       <p>Professional DJ for bookings & music releases.</p>
     </div>
   </section>
@@ -31,7 +31,6 @@
   <section id="music" class="music-section">
     <h2>Latest Music</h2>
     <div class="music-grid">
-      <!-- Repeat this block for each release -->
       <div class="music-item">
         <img src="assets/images/placeholder-album.png" alt="Album Art">
         <h3>Track Title</h3>
@@ -53,7 +52,7 @@
 
   <!-- Footer -->
   <footer class="site-footer">
-    <p>&copy; 2025 Your DJ Name. All rights reserved.</p>
+    <p>&copy; 2025 My DJ Name. All rights reserved.</p>
   </footer>
 
   <script src="js/scripts.js"></script>
