Update DJ website for Griboloski
Update the DJ website to reflect the new DJ name "Griboloski" and enhance the user experience.

* **index.html**
  - Change the title to "Griboloski".
  - Update the hero section to display "Griboloski".
  - Modify the booking button text to "Book Griboloski".
  - Add social media links to the footer.

* **css/styles.css**
  - Implement background animation for the hero section using CSS keyframes.
  - Style the premium booking button with a gradient background, rounded corners, and hover effects.

* **js/scripts.js**
  - Add form validation for the booking form to check required fields and email format before submission.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/griboloski/my-website?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your DJ Name</title>
+  <title>Griboloski</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
   <section id="home" class="hero">
     <div class="hero-content">
       <img src="assets/images/placeholder-logo.png" alt="Logo" class="logo">
-      <h1>Your DJ Name</h1>
+      <h1>Griboloski</h1>
       <p>Professional DJ for bookings & music releases.</p>
     </div>
   </section>
@@ -42,18 +42,19 @@
 
   <!-- Booking Section -->
   <section id="booking" class="booking-section">
-    <h2>Book Me</h2>
+    <h2>Book Griboloski</h2>
     <form action="your-booking-endpoint" method="post">
       <input type="text" name="name" placeholder="Your Name" required>
       <input type="email" name="email" placeholder="Email" required>
       <textarea name="message" placeholder="Event Details" required></textarea>
-      <button type="submit">Submit Booking Request</button>
+      <button type="submit">Book Griboloski</button>
     </form>
   </section>
 
   <!-- Footer -->
   <footer class="site-footer">
-    <p>&copy; 2025 Your DJ Name. All rights reserved.</p>
+    <p>&copy; 2025 Griboloski. All rights reserved.</p>
+    <p>Follow us on <a href="https://soundcloud.com/griboloski">SoundCloud</a> and <a href="https://www.instagram.com/griboloskiii/">Instagram</a></p>
   </footer>
 
   <script src="js/scripts.js"></script>
